--- a/T-POO-700-T2/miniproj/public/index.html
+++ b/T-POO-700-T2/miniproj/public/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>time-manager</title>
+	<title>time-manager</title>
+	<link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,800,800i&display=swap" rel="stylesheet">
 </head>
 <body>
-  <noscript>
-    <strong>We're sorry but time-manager doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-  </noscript>
-  <div id="app"></div>
-  <!-- built files will be auto injected -->
+	<noscript>
+		<strong>We're sorry but time-manager doesn't work properly without JavaScript enabled. Please enable it to
+		        continue.</strong>
+	</noscript>
+	<div id="app"></div>
+	<!-- built files will be auto injected -->
 </body>
 </html>
