--- a/T-POO-700-T2/miniproj/public/index.html
+++ b/T-POO-700-T2/miniproj/public/index.html
@@ -7,6 +7,7 @@
 
 	<title>time-manager</title>
 	<link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,800,800i&display=swap" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
 	<noscript>
